--- a/final-project/css/styles.css
+++ b/final-project/css/styles.css
@@ -1,3 +1,46 @@
-body {
-    background-color: #369;
+
+
+body{
+    margin: 0px;
+    background: black;
+    height: 100%;
 }
+
+
+
+
+header {
+    text-align: center;
+    background: rgb(255, 165, 0)
+
+}
+
+.logo {
+    display: block;
+    
+}
+
+nav ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+nav li {
+    margin-bottom: 1rem;
+    margin-left: 1rem;
+   
+}
+
+nav a {
+    color: white;
+    text-decoration: none;
+    font-size: 1.2rem;
+    text-transform: uppercase;
+}
+
+/* icon fonts*/
+.fa-search {
+    color: brown;
+}
+
