--- a/final-project/css/styles.css
+++ b/final-project/css/styles.css
@@ -1,46 +1,213 @@
-
+*{
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
+    list-style: none;
+    box-sizing: border-box;
+}
 
 body{
-    margin: 0px;
-    background: black;
-    height: 100%;
+    font-family: Arial, Helvetica, sans-serif
 }
 
-
-
-
-header {
-    text-align: center;
-    background: rgb(255, 165, 0)
-
+header{
+    width: 100%;
+    height: 100vh;
+    background-image: url(/images/main-banner.jpg);
+}
+.containt{
+    background-color: rgba(69, 59, 59, 0.7);
+    margin-top: 150px;
+    margin-left: 50px;
+    margin-right: 50px;
+    color: rgb(226, 226, 226);
+    padding: 100px;
+}
+.containt a{
+    background-color: orange;
+    padding: 10px;
+    border-radius: 5px;
+    margin-top: 10px;
+}
+.containt a:hover{
+    color: #fff;
+    background-color: rgb(255, 170, 0);
+    border-bottom: #333 1px solid;
 }
 
-.logo {
-    display: block;
+nav{
+    background-color: rgb(65, 64, 63);
+    height: 50px;
+    width: 100%;
+}
+label.logo img{
+    height: 50px;
+    padding-left: 20px;
+    margin-left: 20px;
+}
+nav ul{
+    float: right;
+    margin-right: 20px;
+
+}
+nav ul li{
+    display: inline-block;
+    line-height: 50px;
+    margin: 0 10px;
+    font-size: 15px;
+    padding: 5px;
+}
+ul li a{
+    color: rgb(231, 175, 86);
+}
+ul li a:hover{
+    color: rgb(63, 63, 66);
+    background-color: orange;
+    padding: 3px;
+    border: 1px solid black;
+    border-radius: 5px;
+}
+.container{
+    padding: 15px;
+    margin: 25px;
+}
+.container-1 .row{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    background-color: rgb(247, 225, 178);
+}
+.row{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-around;  
     
 }
 
-nav ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
+.container-3 .col-3{
+    box-sizing: border-box;
+    box-sizing: border-box;
+    box-shadow: 10px 5px 5px;
+    background-color: rgb(247, 225, 178);
+    margin: 20px;
 }
-
-nav li {
-    margin-bottom: 1rem;
-    margin-left: 1rem;
-   
+.container-2 h1{
+    margin-left: 50px;
 }
-
-nav a {
+.container-1 .col-2{
+    flex-basis: 50%;
+    min-width: 400px;
+    
+}
+.container-1 .col-2 img{
+    max-width: 100%;
+    padding: 30px 15px;
+}
+.container-2 .col-2 img{
+    width: 515px;
+    height: 100%;
+    
+}
+.container-3 .col-3 img{
+    width: 350px;
+    height: 100%;
+    
+}
+.row a{
+    background-color: rgb(55, 54, 54);
+    padding: 9px;
+    background-size: 100%;
     color: white;
-    text-decoration: none;
-    font-size: 1.2rem;
-    text-transform: uppercase;
+    text-align: center;
+    
+}
+footer{
+    background-color: rgb(103, 102, 102);
+    padding: 3px;
+}
+p{
+    margin: 10px;
+}
+h3{
+    margin: 10px;
 }
 
-/* icon fonts*/
-.fa-search {
-    color: brown;
+.our-vision{
+    background-image: url(/images/vision.jpg);
+    width: 100%;
+    height: 100%;
+    padding: 50px;
+    color: white;
 }
+.our-vision a{
+    background-color: orange;
+    padding: 4px;
+    border-radius: 3px;
+    color: rgb(33, 33, 33);
+}
+
+.container-4 .row{
+    background-color: rgb(247, 225, 178);
+    margin: 25px;
+    padding: 10px;
+}
+.container-4 h1{
+    margin-left: 50px;
+    margin-top: 25px;
+}
+.contact-us{
+    padding: 25px;
+}
+.contact-us h2{
+    margin-left: 100px;
+}
+.buton{
+    background-color: orange;
+    padding: 2px;
+    border-radius: 4px;
+    cursor: pointer;
+}
+.buton:hover{
+    color: white;
+    background-color: rgb(54, 53, 44);
+}
+.tabil .row{
+    background-color: rgb(247, 225, 178);
+}
+.tabil h2{
+    margin-left: 50px;
+}
+.tabil h6{
+    background-color: orange;
+    padding: 5px;
+}
+.menu-icon{
+    width: 28px;
+    
+    display: block;
+}
+
+.my-form{
+    padding: 20px;
+}
+.my-form .form-grup{
+    padding-bottom: 10px;
+}
+.my-form input[type="text"]{
+    padding: 5px;
+    width: 100%;
+}
+
+.tabil .row{
+    padding: 15px;
+    
+}
+.tabil .col-2 p{
+    border: #333 1px solid;
+    padding: 10px;
+    padding-right: 100px;
+}
+
 
